بعد رفع المشروع

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Django settings
-DJANGO_SECRET_KEY=django-insecure--yj&bf*x+ck1mr&39&jh29=p*qz(g*bf11!wab8ectrmk54&og
+DJANGO_SECRET_KEY="django-insecure--yj&bf*x+ck1mr&39&jh29=p*qz(g*bf11!wab8ectrmk54&og"
 DJANGO_DEBUG=0
 
 # Use PostgreSQL in production
